<resources>
    <string name="app_name">TabunganKu</string>
    <string name="tabunganku">Tabunganku</string>
    <string name="headerstabunganku">Tabunganku</string>
    <string name="icon_berlangung">Berlangsung</string>
    <string name="icon_tercapai">Tercapai</string>
    <string name="menu">Menu</string>
    <string name="tabungan">Tabungan</string>
    <string name="icon_tambahkan">Tambahkan</string>
    <string name="nama_tabungan">Nama Tabungan</string>
    <string name="target_tabungan">Target Tabungan</string>
    <string name="nominal_pengisian">Nominal Pengisian</string>
    <string name="text_motor">Motor</string>
    <string name="text_harga">Harga Barang</string>
    <string name="text_harian">Rp. </string>
    <string name="text_estimasi">Estimasi :</string>
    <string name="text_hasil_estimasi">1 Bulan lagi</string>
    <string name="text_terkumpul">Terkumpul</string>
    <string name="text_kurang">Kurang</string>
    <string name="text_hasil_terkumpul">Rp. 150.000</string>
    <string name="text_hasil_kurang">Rp. 150.000</string>
    <string name="title_activity_tercapai">TercapaiActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>