<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    tools:context=".aplikasi.CardBerlangsungActivity"
    android:background="@drawable/background_card_berlangsung"
    android:layout_marginBottom="20dp">


<androidx.appcompat.widget.AppCompatTextView
    android:id="@+id/text_nama_barang"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/text_motor"
    android:fontFamily="@font/inter_semibold"
    android:textColor="@color/black"
    android:textSize="32sp"
    android:layout_marginTop="30dp"
    android:layout_marginStart="16dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_harga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_harga"
        android:fontFamily="@font/inter_medium"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/text_nama_barang"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_rp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_harian"
        android:textColor="@color/black"
        android:fontFamily="@font/inter_medium"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_harga"
        android:layout_marginStart="16dp"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_target"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_medium"
        android:text="50.000"
        android:layout_marginStart="38dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/text_rp"
        app:layout_constraintTop_toBottomOf="@id/text_harga" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title_estimasi"
        android:layout_width="68dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/text_estimasi"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_target" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_estimasi"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_medium"
        android:text="@string/text_hasil_estimasi"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@id/title_estimasi"
        app:layout_constraintTop_toBottomOf="@id/text_target" />


    <androidx.cardview.widget.CardView
        android:id="@+id/tombol_terkumpul"
        android:layout_width="190dp"
        android:layout_height="72dp"
        android:elevation="0dp"
        android:backgroundTint="@color/grey_card"
        app:cardMaxElevation="0dp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_estimasi"
        android:layout_marginTop="38dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_terkumpul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:fontFamily="@font/inter_semibold"
            android:textAlignment="center"
            android:text="Terkumpul"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_terkumpul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Rp. 150.000"
            android:textSize="22sp"
            android:textColor="@color/green"
            android:fontFamily="@font/inter_semibold"
            android:layout_marginStart="16dp"
            android:textAlignment="center"
            android:layout_marginTop="35dp"/>




    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/tombol_kurang"
        android:layout_width="190dp"
        android:layout_height="72dp"
        android:backgroundTint="@color/grey_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_estimasi"
        android:layout_marginTop="38dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_kurang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:fontFamily="@font/inter_semibold"
            android:textAlignment="center"
            android:text="Kurang"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_kurang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Rp. 2.849.999"
            android:textSize="22sp"
            android:textColor="@color/grey"
            android:fontFamily="@font/inter_semibold"
            android:layout_marginStart="16dp"
            android:textAlignment="center"
            android:layout_marginTop="35dp"/>




    </androidx.cardview.widget.CardView>








</androidx.constraintlayout.widget.ConstraintLayout>