<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".aplikasi.DashboardActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_marginTop="-10dp"
            android:src="@drawable/background_dashboard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btn_settings"
            android:layout_width="37dp"
            android:layout_height="37dp"
            android:layout_marginEnd="335dp"
            android:layout_marginBottom="83dp"
            android:src="@drawable/gear_settings"
            app:layout_constraintBottom_toBottomOf="@id/header"
            app:layout_constraintEnd_toEndOf="@id/header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/header" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_menu"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="50dp"
            android:fontFamily="@font/inter_extrabold"
            android:text="@string/menu"
            android:textColor="@color/black"
            android:textSize="26sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/scrollview"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/dsh_menu"
            app:layout_constraintTop_toBottomOf="@id/header">


            <!-- icon menu tercapai -->

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/icon_menu_tercapai"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/icon_tercapai"
                app:layout_constraintEnd_toStartOf="@id/garis"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_ket_tercapai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:text="@string/icon_tercapai"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/icon_menu_tercapai"
                app:layout_constraintStart_toStartOf="@id/icon_menu_tercapai"
                app:layout_constraintTop_toBottomOf="@id/icon_menu_tercapai" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/garis"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:src="@drawable/ic_garis"
                app:layout_constraintBottom_toBottomOf="@id/scrollview"
                app:layout_constraintEnd_toStartOf="@id/icon_menu_tambahkan"
                app:layout_constraintStart_toEndOf="@id/icon_menu_tercapai"
                app:layout_constraintTop_toTopOf="@id/scrollview" />

            <!-- icon menu tambahkan -->

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/icon_menu_tambahkan"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/icon_tambahkan"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/garis"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_ket_tambahkan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:text="@string/icon_tambahkan"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/icon_menu_tambahkan"
                app:layout_constraintStart_toStartOf="@id/icon_menu_tambahkan"
                app:layout_constraintTop_toBottomOf="@id/icon_menu_tambahkan" />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_tabungan"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="45dp"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/inter_extrabold"
            android:text="@string/tabungan"
            android:textColor="@color/black"
            android:textSize="26sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/scrollview" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginTop="4dp"
            app:layout_constraintLeft_toLeftOf="@id/title_tabungan"
            app:layout_constraintTop_toBottomOf="@id/title_tabungan"
            tools:listitem="@layout/activity_card_berlangsung" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>


